--- a/packages/poc-webapp/public/login.html
+++ b/packages/poc-webapp/public/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Login</title>
+    <title>Login - Sparkly</title>
   </head>
   <body>
 
@@ -13,7 +13,6 @@
 
     <script src="/assets/htmx.js"></script>
     <script src="/assets/common.js"></script>
-    <script src="/assets/supercop.js"></script>
     <script>
       async function handleLogin() {
         const kp = await supercop.createKeyPair(Buffer.from(seed.value, 'hex'));
