--- a/packages/poc-webapp/public/register.html
+++ b/packages/poc-webapp/public/register.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Register</title>
+    <title>Register - Sparkly</title>
   </head>
   <body>
 
@@ -28,7 +28,6 @@
 
     <script src="/assets/htmx.js"></script>
     <script src="/assets/common.js"></script>
-    <script src="/assets/supercop.js"></script>
     <script>
       async function regenerate(sid = null) {
         seed.value = sid || supercop.createSeed().toString('hex');
