--- a/packages/poc-webapp/public/login.html
+++ b/packages/poc-webapp/public/login.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8"/>
     <title>Login - Sparkly</title>
+    <style>
+      * {
+        font-family: inherit;
+      }
+      button, input {
+        font-size: inherit;
+      }
+      body {
+        font-family: sans-serif;
+      }
+    </style>
   </head>
   <body>
 
