--- a/packages/poc-webapp/public/login.html
+++ b/packages/poc-webapp/public/login.html
@@ -3,17 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Login - Sparkly</title>
-    <style>
-      * {
-        font-family: inherit;
-      }
-      button, input {
-        font-size: inherit;
-      }
-      body {
-        font-family: sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="/assets/style.css"/>
   </head>
   <body>
 
